<resources>
    <string name="app_name">CISC600</string>
    <string name="start">Start</string>
    <string name="loading">Processing…</string>
    <string name="cancel">Cancel</string>
    <!-- CISC 600 -->
    <string name="course_title1">CISC 600</string>
    <!-- M02 Hands-on & Drills -->
    <string name="m02_title">M02</string>
    <string name="m02_problem_1">2.18 Piecewise functions are sometimes useful when the relation-ship between a dependent and an independent variable cannot be adequately  represented  by  a  single  equation.  For  example,  the   velocity of a rocket might be described by</string>
    <string name="m02_problem_2">Develop a well-structured function to compute v as a function of t. Then use this function to generate a table of v versus t for t = -5 to 50 at increments of 0.5.</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="increment">Increments</string>
    <!-- M03 Hands-on & Drills -->
    <string name="m03_title">M03</string>
    <string name="x">x (π):</string>
    <string name="significant_figures">Number of Significant Figures:</string>
    <!-- M04 Hands-on & Drills -->
    <string name="m04_title1">M04–1</string>
    <string name="m04_title2">M04–2</string>
    <string name="taylor_order">Order of Taylor Series Expansion</string>
    <!-- M05 Hands-on & Drills -->
    <string name="m05_title">M05</string>
    <!-- M06 Hands-on & Drills -->
    <string name="m06_title">M06</string>
    <string name="analysis">Analysis</string>
    <!-- Project -->
    <string name="project_title">Project</string>
    <!-- CISC 601 -->
    <string name="course_title2">CISC 601</string>
    <!-- M13 Hands-on & Drills -->
    <string name="m13_title">M13</string>
</resources>