<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".M03Fragment">

    <ImageView
        android:id="@+id/imageView"
        android:src="@drawable/problem_m03"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/m03_title" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/entrySection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/significant_figures"
            android:textAlignment="viewEnd"
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/figureView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:maxLines="1"
            android:text="8"
            android:textAlignment="viewStart"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        app:layout_constraintTop_toBottomOf="@+id/entrySection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <ScrollView
        android:id="@+id/tableView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:layout_constraintBottom_toBottomOf="parent"
        android:scrollbars="vertical"
        android:fillViewport="true">

        <TextView
            android:id="@+id/table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </ScrollView>

    <ImageButton
        android:id="@+id/cancelBtn"
        android:src="@drawable/ic_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tableView"
        android:contentDescription="@string/cancel" />

</androidx.constraintlayout.widget.ConstraintLayout>