<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".M06Fragment">

    <ImageView
        android:id="@+id/imageView"
        android:src="@drawable/problem_m06"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/m06_title" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/polynomial1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:orientation="horizontal">

        <ImageView
            android:src="@drawable/problem_m06_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:layout_gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:textAllCaps="false"
            android:layout_weight="1"/>

        <ImageView
            android:src="@drawable/problem_m06_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:layout_gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:textAllCaps="false"
            android:layout_weight="1"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/polynomial2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/polynomial1"
        android:orientation="horizontal">

        <ImageView
            android:src="@drawable/problem_m06_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:layout_gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:textAllCaps="false"
            android:layout_weight="1"/>

        <ImageView
            android:src="@drawable/problem_m06_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:layout_gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:textAllCaps="false"
            android:layout_weight="1"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/analysis"
        app:layout_constraintTop_toBottomOf="@+id/polynomial2"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.jjoe64.graphview.GraphView
        android:id="@+id/graphView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:seriesData="line"
        android:visibility="invisible"/>

    <ScrollView
        android:id="@+id/tableView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/graphView"
        app:layout_constraintBottom_toBottomOf="parent"
        android:scrollbars="vertical"
        android:fillViewport="true"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:fadeScrollbars="false">

        <TextView
            android:id="@+id/table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>